[package]
name = "ncsisc"
version = "0.2.1"
edition = "2021"
license = "MIT"
author = "zjzjzwd@163.com"
description = "A library for school projects"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.6.5"
curv-kzen = "0.8"
openssl = "0.10"
openssl-sys = "0.9"
sha3 = "0.9.1"
hex = "0.4.3"
ecies = {version = "0.2", default-features = false, features = ["pure"]}
base64 = "0.13.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
libsm = "0.4.1"
bstr = "0.2.17"
